# RevOpe-Multi-Agent-Team

./: CHANGELOG.md  README.md
revops-agent/: .env.example  .gitignore  CLAUDE.md  README.md  playground.py  pyproject.toml
revops-agent/app/: __init__.py
revops-agent/app/agents/: __init__.py  action.py  classification.py  intake.py  review.py
revops-agent/app/models/: __init__.py  schemas.py
revops-agent/app/tools/: __init__.py  scoring.py
revops-agent/app/utils/: __init__.py  llm.py  logger.py
revops-agent/app/workflows/: __init__.py  revops_workflow.py
revops-agent/data/: example_output.md  sample_leads.json
revops-agent/demo/: run_demo.py
revops-agent/tests/: __init__.py  test_placeholder.py  test_workflow.py
